<resources>
    <string name="app_name">应用功耗测试</string>
    <string name="startTest">开始测试</string>
    <string name="stopTest">停止测试</string>
    <string name="action_abouts">关于</string>
    <string name="action_version">版本号</string>
    <string name="action_author">金立OS中心 自动化组</string>
    <string name="author_name">——宋研聪</string>
    <string name="testTime">测试时长(分钟/模块)</string>
    <string name="testReport">测试报告</string>
    <string name="number">序号</string>
    <string name="pkgName">应用名称</string>
    <string name="noReport">当前没有测试数据</string>
    <string name="back">知道了</string>
    <string name="ClearReport">清除测试数据</string>
    <string name="ClearConfirm">是否清除全部本地测试数据</string>
    <string name="confirm">清除数据</string>
    <string name="cancel">取消</string>
    <string name="clearReport">清除全部数据</string>
    <string name="sendMail">发送对比邮件</string>
    <string name="selectTips">选择批次:</string>
    <string name="currentAppSize">应测app:%1$s</string>
    <string name="testAppSize">实测app:%1$s</string>
    <string name="exportReports">导出同版本功耗数据</string>
    <string name="needTestAppCount">需测试应用数:%1$s</string>
    <string name="planTestTimeOfAll">预计总测试时长:%1$s分钟</string>
    <string name="finishTime">结束时间:%1$s</string>
    <string name="uploadData">上传数据</string>
    <string name="connectService">连接服务器%1$s</string>
    <string name="send">发送</string>
    <string name="duration">测试时长:%1$s</string>
    <string name="settings">设置</string>
    <string name="appWaitTimeText">应用</string>
    <string name="wholeWaitTimeText">整机</string>
    <string name="title_Front_Details">前台详情</string>
    <string name="title_Back_Details">后台详情</string>
    <string name="dialogTitle_Exception">异常</string>
    <string name="dialogTitle_TestFinish">测试完成</string>
    <string name="content_Exception">测试中出现异常</string>
    <string name="content_TestFinish">测试完成,是否查看报告?</string>
    <string name="btn_Text_Show">查看</string>
    <string name="btn_Text_Confirm">确定</string>
    <string name="btn_Text_Cancel">取消</string>
    <string name="clearSuccess">清除成功</string>
    <string name="clearFail">清除失败</string>
    <string name="title_TestReport">测试报告</string>
    <string name="title_SendMail">发送邮件</string>
    <string name="message_Connecting">正在连接中</string>
    <string name="appVersion">应用版本</string>
    <string name="power_front">前台耗电(mAh)</string>
    <string name="power_front_avg">前台平均(mA)</string>
    <string name="whole_power_front">前台整机(mA)</string>
    <string name="power_back">后台耗电(mAh)</string>
    <string name="power_back_avg">后台平均(mA)</string>
    <string name="whole_power_back">后台整机(mA)</string>
    <string name="traverseApp">IGo遍历应用</string>
    <string name="monkeyTest">Monkey</string>
    <string name="monkeyTest2">Monkey2</string>
    <string name="appWaitTime_text">静置时长(分钟/应用)</string>
    <string name="accessibility_service_description">应用功耗辅助</string>
    <string name="acc_service_name">应用功耗辅助</string>
    <string name="defaultSelectApp">记事本</string>
    <string name="show_high_power_list">查看高耗电应用</string>
    <string name="highPower">高耗电应用列表</string>
</resources>
