<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity">
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/reports"
        android:orderInCategory="100"
        android:title="@string/testReport"
        app:showAsAction="never" />
    <item
        android:id="@+id/clearReport"
        android:orderInCategory="100"
        android:title="@string/clearReport"
        app:showAsAction="never" />
    <item
        android:id="@+id/uploadData"
        android:orderInCategory="100"
        android:title="@string/uploadData"
        app:showAsAction="never" />
    <item
        android:id="@+id/sendMail"
        android:orderInCategory="100"
        android:title="@string/sendMail"
        app:showAsAction="never" />
    <item
        android:id="@+id/exportReports"
        android:orderInCategory="100"
        android:title="@string/exportReports"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_abouts"
        android:orderInCategory="100"
        android:title="@string/action_abouts"
        app:showAsAction="never" />
</menu>
