<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/batchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentAppSize"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/currentAppSize"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/testAppSize"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/testAppSize"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/duration"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/duration"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/selectTips"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/batchSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/headlineLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/batchLayout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/tvHeadlineStyle"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/number" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:foreground="@color/gray" />

        <TextView
            style="@style/tvHeadlineStyle"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/pkgName" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:foreground="@color/gray" />

        <TextView
            style="@style/tvHeadlineStyle"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/appVersion" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:foreground="@color/gray" />

        <TextView
            style="@style/tvHeadlineStyle"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/power_front" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:foreground="@color/gray" />

        <TextView
            style="@style/tvHeadlineStyle"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/power_front_avg" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:foreground="@color/gray" />

        <TextView
            style="@style/tvHeadlineStyle"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/whole_power_front" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:foreground="@color/gray" />

        <TextView
            style="@style/tvHeadlineStyle"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/power_back" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:foreground="@color/gray" />

        <TextView
            style="@style/tvHeadlineStyle"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/power_back_avg" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:foreground="@color/gray" />

        <TextView
            style="@style/tvHeadlineStyle"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/whole_power_back" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/headlineLayout"
        android:foreground="@color/gray" />

    <ListView
        android:id="@+id/mReport_List"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="8dp"
        android:layout_alignParentBottom="true"
        android:background="#11000000"
        android:layout_below="@+id/line"
        android:layout_gravity="center_vertical"
        android:layoutAnimation="@anim/anim_listview_item" />

</RelativeLayout>
