<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/high_power_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_high_power_list" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/testType_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/select_batch_str"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/selectTips"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/batchSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:prompt="@string/selectTips"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/currentAppSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/currentAppSize"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/testAppSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/testAppSize"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/duration"
            android:textSize="16sp" />
    </LinearLayout>


    <ListView
        android:id="@+id/mReport_List"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:divider="@null"
        android:dividerHeight="8dp"
        android:layoutAnimation="@anim/anim_listview_item" />

</LinearLayout>
</layout>